# thread-pool

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
lib/include/dkubiszewski/threading/: pool.hpp
lib/src/: pool.cpp
test/: CMakeLists.txt  pool_test.cpp
